Restore fixed HNSW serialization waves